nx/test/failing/bug_conv_memory_simple/run.t
  $ ./bug_conv_memory_simple.exe
  Simple convolution memory corruption test...
  81502 Abort trap: 6           ./bug_conv_memory_simple.exe
  [134]
